# fallguard

./: .gitignore  README.md  docker-compose.yml  fallguard.py
backend/: Cargo.toml
backend/src/: logic.rs  main.rs  model.rs  tests.rs  websocket.rs  websockets.rs
frontend/: index.html
migrations/: 20260112000000_create_events_table.sql
scripts/: init_db.bat
